# BM4D-GPU

./: CMakeLists.txt  build.sh
include/bm4d-gpu/: parameters.h
src/: allreader.cpp  main.cpp
